make depend for 5.7.3.pre1

--- a/apps/Makefile.depend
+++ b/apps/Makefile.depend
@@ -289,10 +289,9 @@
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpdelta.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpdelta.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpdelta.lo:  ../include/net-snmp/definitions.h
-./snmpdelta.lo: ../include/net-snmp/types.h 
-./snmpdelta.lo: ../include/net-snmp/library/oid.h
+./snmpdelta.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpdelta.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpdelta.lo:  ../include/net-snmp/library/oid.h
 ./snmpdelta.lo: ../include/net-snmp/library/types.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpdelta.lo: ../include/net-snmp/varbind_api.h
@@ -359,7 +358,7 @@
 ./snmpdelta.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpdf.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpdf.lo: ../include/net-snmp/net-snmp-includes.h 
+./snmpdf.lo:  ../include/net-snmp/net-snmp-includes.h
 ./snmpdf.lo:  ../include/net-snmp/definitions.h
 ./snmpdf.lo: ../include/net-snmp/types.h 
 ./snmpdf.lo: ../include/net-snmp/library/oid.h
@@ -426,7 +425,8 @@
 ./snmpdf.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpdf.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpget.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpget.lo: ../include/net-snmp/utilities.h ../include/net-snmp/types.h
+./snmpget.lo:  ../include/net-snmp/utilities.h
+./snmpget.lo: ../include/net-snmp/types.h 
 ./snmpget.lo:  ../include/net-snmp/library/oid.h
 ./snmpget.lo: ../include/net-snmp/library/types.h
 ./snmpget.lo: ../include/net-snmp/definitions.h
@@ -564,7 +564,7 @@
 ./snmpgetnext.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpset.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpset.lo: ../include/net-snmp/net-snmp-includes.h 
+./snmpset.lo:  ../include/net-snmp/net-snmp-includes.h
 ./snmpset.lo:  ../include/net-snmp/definitions.h
 ./snmpset.lo: ../include/net-snmp/types.h 
 ./snmpset.lo: ../include/net-snmp/library/oid.h
@@ -702,9 +702,8 @@
 ./snmpstatus.lo: ../include/net-snmp/library/snmpusm.h
 ./snmptable.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmptable.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptable.lo:  ../include/net-snmp/definitions.h
-./snmptable.lo: ../include/net-snmp/types.h 
-./snmptable.lo: ../include/net-snmp/library/oid.h
+./snmptable.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptable.lo:  ../include/net-snmp/library/oid.h
 ./snmptable.lo: ../include/net-snmp/library/types.h
 ./snmptable.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptable.lo: ../include/net-snmp/varbind_api.h
@@ -771,7 +770,7 @@
 ./snmptable.lo: ../include/net-snmp/library/snmptsm.h
 ./snmptable.lo: ../include/net-snmp/library/snmpusm.h
 ./snmptest.lo: ../include/net-snmp/net-snmp-config.h 
-./snmptest.lo: ../include/net-snmp/net-snmp-includes.h 
+./snmptest.lo:  ../include/net-snmp/net-snmp-includes.h
 ./snmptest.lo:  ../include/net-snmp/definitions.h
 ./snmptest.lo: ../include/net-snmp/types.h 
 ./snmptest.lo: ../include/net-snmp/library/oid.h
@@ -1008,9 +1007,8 @@
 ./snmptranslate.lo: ../include/net-snmp/library/vacm.h
 ./snmptrap.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmptrap.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptrap.lo:  ../include/net-snmp/definitions.h
-./snmptrap.lo: ../include/net-snmp/types.h 
-./snmptrap.lo: ../include/net-snmp/library/oid.h
+./snmptrap.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptrap.lo:  ../include/net-snmp/library/oid.h
 ./snmptrap.lo: ../include/net-snmp/library/types.h
 ./snmptrap.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptrap.lo: ../include/net-snmp/varbind_api.h
@@ -1152,9 +1150,8 @@
 ./snmptrapd_auth.lo: ../include/net-snmp/agent/agent_trap.h
 ./snmptrapd.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmptrapd.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptrapd.lo:  ../include/net-snmp/definitions.h
-./snmptrapd.lo: ../include/net-snmp/types.h 
-./snmptrapd.lo: ../include/net-snmp/library/oid.h
+./snmptrapd.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptrapd.lo:  ../include/net-snmp/library/oid.h
 ./snmptrapd.lo: ../include/net-snmp/library/types.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptrapd.lo: ../include/net-snmp/varbind_api.h
@@ -1447,7 +1444,7 @@
 ./snmptrapd_sql.lo: ../include/net-snmp/net-snmp-config.h
 ./snmptrapd_sql.lo: ../include/net-snmp/net-snmp-features.h
 ./snmpusm.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpusm.lo: ../include/net-snmp/net-snmp-includes.h 
+./snmpusm.lo:  ../include/net-snmp/net-snmp-includes.h
 ./snmpusm.lo:  ../include/net-snmp/definitions.h
 ./snmpusm.lo: ../include/net-snmp/types.h 
 ./snmpusm.lo: ../include/net-snmp/library/oid.h
@@ -1515,7 +1512,7 @@
 ./snmpusm.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpusm.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpvacm.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpvacm.lo: ../include/net-snmp/net-snmp-includes.h 
+./snmpvacm.lo:  ../include/net-snmp/net-snmp-includes.h
 ./snmpvacm.lo:  ../include/net-snmp/definitions.h
 ./snmpvacm.lo: ../include/net-snmp/types.h 
 ./snmpvacm.lo: ../include/net-snmp/library/oid.h
@@ -1585,9 +1582,8 @@
 ./snmpvacm.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpwalk.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmpwalk.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpwalk.lo:  ../include/net-snmp/definitions.h
-./snmpwalk.lo: ../include/net-snmp/types.h 
-./snmpwalk.lo: ../include/net-snmp/library/oid.h
+./snmpwalk.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpwalk.lo:  ../include/net-snmp/library/oid.h
 ./snmpwalk.lo: ../include/net-snmp/library/types.h
 ./snmpwalk.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpwalk.lo: ../include/net-snmp/varbind_api.h
@@ -1867,6 +1863,77 @@
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpnetstat/inet.lo: ./snmpnetstat/main.h ./snmpnetstat/netstat.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/net-snmp-config.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/definitions.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/types.h 
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/oid.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/types.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/varbind_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_client.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/pdu_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/asn1.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/output_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_debug.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_logging.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/session_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/callback.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_transport.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_service.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpCallbackDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpUnixDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpUDPDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpIPv4BaseDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpUDPBaseDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpTCPDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpUDPIPv6Domain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpIPv6BaseDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpIPXDomain.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/ucd_compat.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/mib.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/mib_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/parse.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/oid_stash.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/net-snmp-features.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_impl.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/getopt.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/utilities.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/system.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/tools.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/int64.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/mt_support.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_alarm.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/data_list.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/check_varbind.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/container.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/factory.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/container_binary_array.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/container_list_ssll.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/container_iterator.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/container.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_assert.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/version.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/config_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/read_config.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/default_store.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_parse_args.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_enum.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/vacm.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/snmpv3_api.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpv3.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/transform_oids.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/keytools.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/scapi.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/lcd_time.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmp_secmod.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpv3-security-includes.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmptsm.h
+./snmpnetstat/inetx.lo: ../include/net-snmp/library/snmpusm.h
+./snmpnetstat/inetx.lo: ./snmpnetstat/main.h ./snmpnetstat/netstat.h
 ./snmpnetstat/main.lo: ../include/net-snmp/net-snmp-config.h
 ./snmpnetstat/main.lo: ../include/net-snmp/net-snmp-includes.h
 ./snmpnetstat/main.lo: ../include/net-snmp/definitions.h
@@ -2009,6 +2076,77 @@
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpnetstat/route.lo: ./snmpnetstat/main.h ./snmpnetstat/netstat.h
+./snmpnetstat/routex.lo: ../include/net-snmp/net-snmp-config.h
+./snmpnetstat/routex.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpnetstat/routex.lo: ../include/net-snmp/definitions.h
+./snmpnetstat/routex.lo: ../include/net-snmp/types.h 
+./snmpnetstat/routex.lo: ../include/net-snmp/library/oid.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/types.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/varbind_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_client.h
+./snmpnetstat/routex.lo: ../include/net-snmp/pdu_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/asn1.h
+./snmpnetstat/routex.lo: ../include/net-snmp/output_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_debug.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_logging.h
+./snmpnetstat/routex.lo: ../include/net-snmp/session_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/callback.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_transport.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_service.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpCallbackDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpUnixDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpUDPDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpIPv4BaseDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpUDPBaseDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpTCPDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpUDPIPv6Domain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpIPv6BaseDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpIPXDomain.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/ucd_compat.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/mib.h
+./snmpnetstat/routex.lo: ../include/net-snmp/mib_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/parse.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/oid_stash.h
+./snmpnetstat/routex.lo: ../include/net-snmp/net-snmp-features.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_impl.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/getopt.h
+./snmpnetstat/routex.lo: ../include/net-snmp/utilities.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/system.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/tools.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/int64.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/mt_support.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_alarm.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/data_list.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/check_varbind.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/container.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/factory.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/container_binary_array.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/container_list_ssll.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/container_iterator.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/container.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_assert.h
+./snmpnetstat/routex.lo: ../include/net-snmp/version.h
+./snmpnetstat/routex.lo: ../include/net-snmp/config_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/read_config.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/default_store.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_parse_args.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_enum.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/vacm.h
+./snmpnetstat/routex.lo: ../include/net-snmp/snmpv3_api.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpv3.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/transform_oids.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/keytools.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/scapi.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/lcd_time.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmp_secmod.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpv3-security-includes.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmptsm.h
+./snmpnetstat/routex.lo: ../include/net-snmp/library/snmpusm.h
+./snmpnetstat/routex.lo: ./snmpnetstat/main.h ./snmpnetstat/netstat.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/net-snmp-config.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/net-snmp-includes.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/definitions.h
