--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -5,8 +5,9 @@
 ./if.lo: ../../include/net-snmp/system/sysv.h
 ./if.lo: ../../include/net-snmp/system/generic.h
 ./if.lo: ../../include/net-snmp/net-snmp-includes.h 
-./if.lo: ../../include/net-snmp/definitions.h ../../include/net-snmp/types.h
-./if.lo:  ../../include/net-snmp/library/oid.h
+./if.lo:  ../../include/net-snmp/definitions.h
+./if.lo: ../../include/net-snmp/types.h 
+./if.lo: ../../include/net-snmp/library/oid.h
 ./if.lo: ../../include/net-snmp/library/types.h
 ./if.lo: ../../include/net-snmp/library/snmp_api.h
 ./if.lo: ../../include/net-snmp/varbind_api.h
@@ -29,7 +30,6 @@
 ./if.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./if.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./if.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./if.lo: ../../include/net-snmp/library/ucd_compat.h
 ./if.lo: ../../include/net-snmp/library/mib.h
 ./if.lo: ../../include/net-snmp/mib_api.h
@@ -72,7 +72,8 @@
 ./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./if.lo: ../../include/net-snmp/library/snmptsm.h
 ./if.lo: ../../include/net-snmp/library/snmpusm.h 
-./if.lo:  main.h netstat.h
+./if.lo:   main.h
+./if.lo: netstat.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./inet6.lo: ../../include/net-snmp/definitions.h
@@ -100,7 +101,6 @@
 ./inet6.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./inet6.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet6.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet6.lo: ../../include/net-snmp/library/mib.h
 ./inet6.lo: ../../include/net-snmp/mib_api.h
@@ -145,7 +145,7 @@
 ./inet6.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./inet.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet.lo: ../../include/net-snmp/net-snmp-includes.h 
-./inet.lo: ../../include/net-snmp/definitions.h
+./inet.lo:  ../../include/net-snmp/definitions.h
 ./inet.lo: ../../include/net-snmp/types.h 
 ./inet.lo: ../../include/net-snmp/library/oid.h
 ./inet.lo: ../../include/net-snmp/library/types.h
@@ -170,7 +170,6 @@
 ./inet.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./inet.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./inet.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet.lo: ../../include/net-snmp/library/mib.h
 ./inet.lo: ../../include/net-snmp/mib_api.h
@@ -213,9 +212,78 @@
 ./inet.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./inet.lo: ../../include/net-snmp/library/snmptsm.h
 ./inet.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
+./inetx.lo: ../../include/net-snmp/net-snmp-config.h
+./inetx.lo: ../../include/net-snmp/net-snmp-includes.h 
+./inetx.lo: ../../include/net-snmp/definitions.h
+./inetx.lo: ../../include/net-snmp/types.h 
+./inetx.lo: ../../include/net-snmp/library/oid.h
+./inetx.lo: ../../include/net-snmp/library/types.h
+./inetx.lo: ../../include/net-snmp/library/snmp_api.h
+./inetx.lo: ../../include/net-snmp/varbind_api.h
+./inetx.lo: ../../include/net-snmp/library/snmp_client.h
+./inetx.lo: ../../include/net-snmp/pdu_api.h
+./inetx.lo: ../../include/net-snmp/library/asn1.h
+./inetx.lo: ../../include/net-snmp/output_api.h
+./inetx.lo: ../../include/net-snmp/library/snmp_debug.h
+./inetx.lo: ../../include/net-snmp/library/snmp_logging.h
+./inetx.lo: ../../include/net-snmp/session_api.h
+./inetx.lo: ../../include/net-snmp/library/callback.h
+./inetx.lo: ../../include/net-snmp/library/snmp_transport.h
+./inetx.lo: ../../include/net-snmp/library/snmp_service.h
+./inetx.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpUnixDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpUDPDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./inetx.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inetx.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./inetx.lo: ../../include/net-snmp/library/ucd_compat.h
+./inetx.lo: ../../include/net-snmp/library/mib.h
+./inetx.lo: ../../include/net-snmp/mib_api.h
+./inetx.lo: ../../include/net-snmp/library/parse.h
+./inetx.lo: ../../include/net-snmp/library/oid_stash.h
+./inetx.lo: ../../include/net-snmp/net-snmp-features.h
+./inetx.lo: ../../include/net-snmp/library/snmp_impl.h
+./inetx.lo: ../../include/net-snmp/library/snmp.h
+./inetx.lo: ../../include/net-snmp/library/snmp-tc.h
+./inetx.lo: ../../include/net-snmp/library/getopt.h
+./inetx.lo: ../../include/net-snmp/utilities.h
+./inetx.lo: ../../include/net-snmp/library/system.h
+./inetx.lo: ../../include/net-snmp/library/tools.h
+./inetx.lo: ../../include/net-snmp/library/int64.h
+./inetx.lo: ../../include/net-snmp/library/mt_support.h
+./inetx.lo: ../../include/net-snmp/library/snmp_alarm.h
+./inetx.lo: ../../include/net-snmp/library/data_list.h
+./inetx.lo: ../../include/net-snmp/library/check_varbind.h
+./inetx.lo: ../../include/net-snmp/library/container.h
+./inetx.lo: ../../include/net-snmp/library/factory.h
+./inetx.lo: ../../include/net-snmp/library/container_binary_array.h
+./inetx.lo: ../../include/net-snmp/library/container_list_ssll.h
+./inetx.lo: ../../include/net-snmp/library/container_iterator.h
+./inetx.lo: ../../include/net-snmp/library/container.h
+./inetx.lo: ../../include/net-snmp/library/snmp_assert.h
+./inetx.lo: ../../include/net-snmp/version.h
+./inetx.lo: ../../include/net-snmp/config_api.h
+./inetx.lo: ../../include/net-snmp/library/read_config.h
+./inetx.lo: ../../include/net-snmp/library/default_store.h
+./inetx.lo: ../../include/net-snmp/library/snmp_parse_args.h
+./inetx.lo: ../../include/net-snmp/library/snmp_enum.h
+./inetx.lo: ../../include/net-snmp/library/vacm.h
+./inetx.lo: ../../include/net-snmp/snmpv3_api.h
+./inetx.lo: ../../include/net-snmp/library/snmpv3.h
+./inetx.lo: ../../include/net-snmp/library/transform_oids.h
+./inetx.lo: ../../include/net-snmp/library/keytools.h
+./inetx.lo: ../../include/net-snmp/library/scapi.h
+./inetx.lo: ../../include/net-snmp/library/lcd_time.h
+./inetx.lo: ../../include/net-snmp/library/snmp_secmod.h
+./inetx.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./inetx.lo: ../../include/net-snmp/library/snmptsm.h
+./inetx.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./main.lo: ../../include/net-snmp/net-snmp-config.h
 ./main.lo: ../../include/net-snmp/net-snmp-includes.h 
-./main.lo: ../../include/net-snmp/definitions.h
+./main.lo:  ../../include/net-snmp/definitions.h
 ./main.lo: ../../include/net-snmp/types.h 
 ./main.lo: ../../include/net-snmp/library/oid.h
 ./main.lo: ../../include/net-snmp/library/types.h
@@ -240,7 +308,6 @@
 ./main.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./main.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./main.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./main.lo: ../../include/net-snmp/library/ucd_compat.h
 ./main.lo: ../../include/net-snmp/library/mib.h
 ./main.lo: ../../include/net-snmp/mib_api.h
@@ -310,7 +377,6 @@
 ./route.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./route.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./route.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./route.lo: ../../include/net-snmp/library/ucd_compat.h
 ./route.lo: ../../include/net-snmp/library/mib.h
 ./route.lo: ../../include/net-snmp/mib_api.h
@@ -353,6 +419,75 @@
 ./route.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./route.lo: ../../include/net-snmp/library/snmptsm.h
 ./route.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
+./routex.lo: ../../include/net-snmp/net-snmp-config.h
+./routex.lo: ../../include/net-snmp/net-snmp-includes.h 
+./routex.lo: ../../include/net-snmp/definitions.h
+./routex.lo: ../../include/net-snmp/types.h 
+./routex.lo: ../../include/net-snmp/library/oid.h
+./routex.lo: ../../include/net-snmp/library/types.h
+./routex.lo: ../../include/net-snmp/library/snmp_api.h
+./routex.lo: ../../include/net-snmp/varbind_api.h
+./routex.lo: ../../include/net-snmp/library/snmp_client.h
+./routex.lo: ../../include/net-snmp/pdu_api.h
+./routex.lo: ../../include/net-snmp/library/asn1.h
+./routex.lo: ../../include/net-snmp/output_api.h
+./routex.lo: ../../include/net-snmp/library/snmp_debug.h
+./routex.lo: ../../include/net-snmp/library/snmp_logging.h
+./routex.lo: ../../include/net-snmp/session_api.h
+./routex.lo: ../../include/net-snmp/library/callback.h
+./routex.lo: ../../include/net-snmp/library/snmp_transport.h
+./routex.lo: ../../include/net-snmp/library/snmp_service.h
+./routex.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpUnixDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpUDPDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./routex.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./routex.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./routex.lo: ../../include/net-snmp/library/ucd_compat.h
+./routex.lo: ../../include/net-snmp/library/mib.h
+./routex.lo: ../../include/net-snmp/mib_api.h
+./routex.lo: ../../include/net-snmp/library/parse.h
+./routex.lo: ../../include/net-snmp/library/oid_stash.h
+./routex.lo: ../../include/net-snmp/net-snmp-features.h
+./routex.lo: ../../include/net-snmp/library/snmp_impl.h
+./routex.lo: ../../include/net-snmp/library/snmp.h
+./routex.lo: ../../include/net-snmp/library/snmp-tc.h
+./routex.lo: ../../include/net-snmp/library/getopt.h
+./routex.lo: ../../include/net-snmp/utilities.h
+./routex.lo: ../../include/net-snmp/library/system.h
+./routex.lo: ../../include/net-snmp/library/tools.h
+./routex.lo: ../../include/net-snmp/library/int64.h
+./routex.lo: ../../include/net-snmp/library/mt_support.h
+./routex.lo: ../../include/net-snmp/library/snmp_alarm.h
+./routex.lo: ../../include/net-snmp/library/data_list.h
+./routex.lo: ../../include/net-snmp/library/check_varbind.h
+./routex.lo: ../../include/net-snmp/library/container.h
+./routex.lo: ../../include/net-snmp/library/factory.h
+./routex.lo: ../../include/net-snmp/library/container_binary_array.h
+./routex.lo: ../../include/net-snmp/library/container_list_ssll.h
+./routex.lo: ../../include/net-snmp/library/container_iterator.h
+./routex.lo: ../../include/net-snmp/library/container.h
+./routex.lo: ../../include/net-snmp/library/snmp_assert.h
+./routex.lo: ../../include/net-snmp/version.h
+./routex.lo: ../../include/net-snmp/config_api.h
+./routex.lo: ../../include/net-snmp/library/read_config.h
+./routex.lo: ../../include/net-snmp/library/default_store.h
+./routex.lo: ../../include/net-snmp/library/snmp_parse_args.h
+./routex.lo: ../../include/net-snmp/library/snmp_enum.h
+./routex.lo: ../../include/net-snmp/library/vacm.h
+./routex.lo: ../../include/net-snmp/snmpv3_api.h
+./routex.lo: ../../include/net-snmp/library/snmpv3.h
+./routex.lo: ../../include/net-snmp/library/transform_oids.h
+./routex.lo: ../../include/net-snmp/library/keytools.h
+./routex.lo: ../../include/net-snmp/library/scapi.h
+./routex.lo: ../../include/net-snmp/library/lcd_time.h
+./routex.lo: ../../include/net-snmp/library/snmp_secmod.h
+./routex.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./routex.lo: ../../include/net-snmp/library/snmptsm.h
+./routex.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-config.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./winstub.lo: ../../include/net-snmp/definitions.h
@@ -380,7 +515,6 @@
 ./winstub.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./winstub.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./winstub.lo: ../../include/net-snmp/library/ucd_compat.h
 ./winstub.lo: ../../include/net-snmp/library/mib.h
 ./winstub.lo: ../../include/net-snmp/mib_api.h
