--- a/apps/Makefile.depend
+++ b/apps/Makefile.depend
@@ -289,10 +289,9 @@
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpdelta.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpdelta.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpdelta.lo:  ../include/net-snmp/definitions.h
-./snmpdelta.lo: ../include/net-snmp/types.h 
-./snmpdelta.lo: ../include/net-snmp/library/oid.h
+./snmpdelta.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpdelta.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpdelta.lo:  ../include/net-snmp/library/oid.h
 ./snmpdelta.lo: ../include/net-snmp/library/types.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpdelta.lo: ../include/net-snmp/varbind_api.h
@@ -359,10 +358,9 @@
 ./snmpdelta.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpdf.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpdf.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpdf.lo:  ../include/net-snmp/definitions.h
-./snmpdf.lo: ../include/net-snmp/types.h 
-./snmpdf.lo: ../include/net-snmp/library/oid.h
+./snmpdf.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpdf.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpdf.lo:  ../include/net-snmp/library/oid.h
 ./snmpdf.lo: ../include/net-snmp/library/types.h
 ./snmpdf.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpdf.lo: ../include/net-snmp/varbind_api.h
@@ -426,7 +424,8 @@
 ./snmpdf.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpdf.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpget.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpget.lo: ../include/net-snmp/utilities.h ../include/net-snmp/types.h
+./snmpget.lo:  ../include/net-snmp/utilities.h
+./snmpget.lo: ../include/net-snmp/types.h 
 ./snmpget.lo:  ../include/net-snmp/library/oid.h
 ./snmpget.lo: ../include/net-snmp/library/types.h
 ./snmpget.lo: ../include/net-snmp/definitions.h
@@ -468,7 +467,7 @@
 ./snmpget.lo: ../include/net-snmp/library/data_list.h
 ./snmpget.lo: ../include/net-snmp/library/check_varbind.h
 ./snmpget.lo: ../include/net-snmp/library/container.h 
-./snmpget.lo:  ../include/net-snmp/library/factory.h
+./snmpget.lo: ../include/net-snmp/library/factory.h
 ./snmpget.lo: ../include/net-snmp/library/container_binary_array.h
 ./snmpget.lo: ../include/net-snmp/library/container_list_ssll.h
 ./snmpget.lo: ../include/net-snmp/library/container_iterator.h
@@ -564,10 +563,9 @@
 ./snmpgetnext.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpset.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpset.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpset.lo:  ../include/net-snmp/definitions.h
-./snmpset.lo: ../include/net-snmp/types.h 
-./snmpset.lo: ../include/net-snmp/library/oid.h
+./snmpset.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpset.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpset.lo:  ../include/net-snmp/library/oid.h
 ./snmpset.lo: ../include/net-snmp/library/types.h
 ./snmpset.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpset.lo: ../include/net-snmp/varbind_api.h
@@ -702,9 +700,8 @@
 ./snmpstatus.lo: ../include/net-snmp/library/snmpusm.h
 ./snmptable.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmptable.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptable.lo:  ../include/net-snmp/definitions.h
-./snmptable.lo: ../include/net-snmp/types.h 
-./snmptable.lo: ../include/net-snmp/library/oid.h
+./snmptable.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptable.lo:  ../include/net-snmp/library/oid.h
 ./snmptable.lo: ../include/net-snmp/library/types.h
 ./snmptable.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptable.lo: ../include/net-snmp/varbind_api.h
@@ -771,10 +768,9 @@
 ./snmptable.lo: ../include/net-snmp/library/snmptsm.h
 ./snmptable.lo: ../include/net-snmp/library/snmpusm.h
 ./snmptest.lo: ../include/net-snmp/net-snmp-config.h 
-./snmptest.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptest.lo:  ../include/net-snmp/definitions.h
-./snmptest.lo: ../include/net-snmp/types.h 
-./snmptest.lo: ../include/net-snmp/library/oid.h
+./snmptest.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmptest.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptest.lo:  ../include/net-snmp/library/oid.h
 ./snmptest.lo: ../include/net-snmp/library/types.h
 ./snmptest.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptest.lo: ../include/net-snmp/varbind_api.h
@@ -842,8 +838,9 @@
 ./snmptls.lo: ../include/net-snmp/net-snmp-config.h
 ./snmptls.lo: ../include/net-snmp/net-snmp-features.h
 ./snmptls.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptls.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
-./snmptls.lo:  ../include/net-snmp/library/oid.h
+./snmptls.lo:  ../include/net-snmp/definitions.h
+./snmptls.lo: ../include/net-snmp/types.h 
+./snmptls.lo: ../include/net-snmp/library/oid.h
 ./snmptls.lo: ../include/net-snmp/library/types.h
 ./snmptls.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptls.lo: ../include/net-snmp/varbind_api.h
@@ -1152,9 +1149,8 @@
 ./snmptrapd_auth.lo: ../include/net-snmp/agent/agent_trap.h
 ./snmptrapd.lo: ../include/net-snmp/net-snmp-config.h 
 ./snmptrapd.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmptrapd.lo:  ../include/net-snmp/definitions.h
-./snmptrapd.lo: ../include/net-snmp/types.h 
-./snmptrapd.lo: ../include/net-snmp/library/oid.h
+./snmptrapd.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmptrapd.lo:  ../include/net-snmp/library/oid.h
 ./snmptrapd.lo: ../include/net-snmp/library/types.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp_api.h
 ./snmptrapd.lo: ../include/net-snmp/varbind_api.h
@@ -1447,10 +1443,9 @@
 ./snmptrapd_sql.lo: ../include/net-snmp/net-snmp-config.h
 ./snmptrapd_sql.lo: ../include/net-snmp/net-snmp-features.h
 ./snmpusm.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpusm.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpusm.lo:  ../include/net-snmp/definitions.h
-./snmpusm.lo: ../include/net-snmp/types.h 
-./snmpusm.lo: ../include/net-snmp/library/oid.h
+./snmpusm.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpusm.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpusm.lo:  ../include/net-snmp/library/oid.h
 ./snmpusm.lo: ../include/net-snmp/library/types.h
 ./snmpusm.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpusm.lo: ../include/net-snmp/varbind_api.h
@@ -1515,10 +1510,9 @@
 ./snmpusm.lo: ../include/net-snmp/library/snmptsm.h
 ./snmpusm.lo: ../include/net-snmp/library/snmpusm.h
 ./snmpvacm.lo: ../include/net-snmp/net-snmp-config.h 
-./snmpvacm.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpvacm.lo:  ../include/net-snmp/definitions.h
-./snmpvacm.lo: ../include/net-snmp/types.h 
-./snmpvacm.lo: ../include/net-snmp/library/oid.h
+./snmpvacm.lo:  ../include/net-snmp/net-snmp-includes.h
+./snmpvacm.lo: ../include/net-snmp/definitions.h ../include/net-snmp/types.h
+./snmpvacm.lo:  ../include/net-snmp/library/oid.h
 ./snmpvacm.lo: ../include/net-snmp/library/types.h
 ./snmpvacm.lo: ../include/net-snmp/library/snmp_api.h
 ./snmpvacm.lo: ../include/net-snmp/varbind_api.h
